[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
rough = true

[sub_resource type="CubeMesh" id=2]
size = Vector3( 10, 1.8, 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.94902, 0.0588235, 0.0588235, 1 )

[sub_resource type="CylinderMesh" id=4]
top_radius = 10.0
bottom_radius = 10.0

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.243137, 0.67451, 0.823529, 1 )

[sub_resource type="CylinderShape" id=6]
radius = 10.0

[sub_resource type="Environment" id=7]
ambient_light_color = Color( 0.976471, 0.960784, 0.960784, 1 )

[sub_resource type="Environment" id=8]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="PhysicsMaterial" id=9]
rough = true
absorbent = true

[sub_resource type="BoxShape" id=10]
extents = Vector3( 100, 1, 100 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 100, 1, 100 )

[sub_resource type="Gradient" id=12]

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=14]
albedo_texture = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.847059, 0.690196, 0.219608, 1 )

[sub_resource type="CubeMesh" id=16]
material = SubResource( 15 )
size = Vector3( 4, 10, 4 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 2, 5, 2 )

[node name="Spatial" type="Spatial"]

[node name="Player" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.033844, 1.76523, -0.330708 )
physics_material_override = SubResource( 1 )
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="PlayerModel" type="Spatial" parent="Player"]

[node name="MeshInstance" type="MeshInstance" parent="Player/PlayerModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.7969 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="Player/PlayerModel"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
shape = SubResource( 6 )

[node name="CameraPerspective" type="Camera" parent="."]
transform = Transform( -0.608339, 0.518933, -0.600527, -0.0690782, 0.719148, 0.691414, 0.790666, 0.462097, -0.401639, -42.147, 47.5315, -31.2095 )
environment = SubResource( 7 )
current = true
fov = 68.856
size = 50.0

[node name="CameraDebugTop" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 63.261, 0.053545 )
environment = SubResource( 7 )
projection = 1
fov = 68.856
size = 100.0

[node name="CameraDebugSide" type="Camera" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 4.13424, -114.973 )
environment = SubResource( 7 )
projection = 1
fov = 68.856
size = 50.0
far = 159.4

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 800, 600 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="."]
physics_material_override = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 11 )
material/0 = SubResource( 14 )

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.927, 5.56629, -25.8654 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
mesh = SubResource( 16 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
mesh = SubResource( 16 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 17 )

[node name="CollisionShape2" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
shape = SubResource( 17 )
